--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,7 +11,7 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.aws[:access_key_id] %>
   # access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.aws[:secret_access_key]) %>
+  secret_access_key: <%= Rails.application.credentials.aws[:secret_access_key] %>
   # secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: ap-northeast-1
   bucket: dic-task-attachments-production
